<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.qwerfghi.calculator.CalculatorActivity">

    <EditText
        android:id="@+id/expression"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:background="@null"
        android:cursorVisible="true"
        android:gravity="bottom|end"
        android:inputType="none"
        android:singleLine="true"
        android:text="@string/zero_value"
        android:textSize="48sp" />

    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        app:columnCount="4"
        app:rowCount="5"
        android:layout_height="0dp"
        android:layout_weight="7">

        <Button
            android:id="@+id/button_erase"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/operations_button_background"
            android:text="@string/button_erase"
            android:textColor="@color/colorGreen"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button_left_bracket"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:background="@drawable/operations_button_background"
            android:text="@string/button_left_bracket" />

        <Button
            android:id="@+id/button_right_bracket"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:background="@drawable/operations_button_background"
            android:text="@string/button_right_bracket" />

        <Button
            android:id="@+id/button_reset"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/operations_button_background"
            android:text="@string/button_reset"
            android:textColor="@color/colorGreen"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button_exponentiation"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:background="@drawable/operations_button_background"
            android:text="@string/button_exponentiation" />

        <Button
            android:id="@+id/button_dot"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:background="@drawable/operations_button_background"
            android:text="@string/button_dot" />

        <Button
            android:id="@+id/button_factorial"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:background="@drawable/operations_button_background"
            android:text="@string/button_factorial" />

        <Button
            android:id="@+id/button_sqrt"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:background="@drawable/operations_button_background"
            android:text="@string/button_sqrt" />

        <Button
            android:id="@+id/button_one"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:background="@drawable/numbers_buttons_background"
            android:text="@string/button1" />

        <Button
            android:id="@+id/button_two"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:background="@drawable/numbers_buttons_background"
            android:text="@string/button2" />

        <Button
            android:id="@+id/button_three"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:background="@drawable/numbers_buttons_background"
            android:text="@string/button3" />

        <Button
            android:id="@+id/button_plus"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:background="@drawable/operations_button_background"
            android:text="@string/button_plus" />

        <Button
            android:id="@+id/button_four"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:background="@drawable/numbers_buttons_background"
            android:text="@string/button4" />

        <Button
            android:id="@+id/button_five"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:background="@drawable/numbers_buttons_background"
            android:text="@string/button5" />

        <Button
            android:id="@+id/button_six"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:background="@drawable/numbers_buttons_background"
            android:text="@string/button6" />

        <Button
            android:id="@+id/button_minus"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:background="@drawable/operations_button_background"
            android:text="@string/button_minus" />

        <Button
            android:id="@+id/button_seven"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:background="@drawable/numbers_buttons_background"
            android:text="@string/button7" />

        <Button
            android:id="@+id/button_eight"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:background="@drawable/numbers_buttons_background"
            android:text="@string/button8" />

        <Button
            android:id="@+id/button_nine"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:background="@drawable/numbers_buttons_background"
            android:text="@string/button9" />

        <Button
            android:id="@+id/button_division"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:background="@drawable/operations_button_background"
            android:text="@string/button_division" />

        <Button
            android:id="@+id/button_sin"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:background="@drawable/operations_button_background"
            android:text="@string/button_sin" />

        <Button
            android:id="@+id/button_zero"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:background="@drawable/numbers_buttons_background"
            android:text="@string/button0" />

        <Button
            android:id="@+id/button_cos"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:background="@drawable/operations_button_background"
            android:text="@string/button_cos" />

        <Button
            android:id="@+id/button_multiplication"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:background="@drawable/operations_button_background"
            android:text="@string/button_multiplication" />

        <Button
            android:id="@+id/button_tag"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:background="@drawable/operations_button_background"
            android:text="@string/button_tag" />

        <Button
            android:id="@+id/button_ln"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:background="@drawable/operations_button_background"
            android:text="@string/button_ln" />

        <Button
            android:id="@+id/button_ctg"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:background="@drawable/operations_button_background"
            android:text="@string/button_ctg" />

        <Button
            android:id="@+id/button_equal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/equal_button_background"
            android:text="@string/button_equal"
            android:textColor="#FFFFFF"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

    </android.support.v7.widget.GridLayout>

</LinearLayout>